<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/popularMoviesFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/bottom_navigation_main_title_popular"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favoriteMoviesFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/bottom_navigation_main_title_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/searchMovieFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/bottom_navigation_main_title_search"
        app:showAsAction="ifRoom"/>
</menu>